# loglumen

./: CLAUDE.md  README.md
agent/: COMPLETE_COLLECTORS_GUIDE.md  DEPLOYMENT_GUIDE.md  EXAMPLE_WALKTHROUGH.md  README.md  REAL_LOGS_GUIDE.md  config_loader.py  main.py  sender.py  test_all_collectors.py  test_real_logs.py
agent/collectors/: EXAMPLE_LINUX_AUTH.md  README.md  utils.py
agent/collectors/linux/: __init__.py  auth.py  auth_journald.py  auth_unified.py  service.py  software.py  system.py
agent/collectors/windows/: auth.py  privilege.py  remote.py  service.py  software.py  system.py
config/: README.md  agent.toml  server.example.toml  server.toml
deploy/: README.md
deploy/agent/: loglumen-agent.service
deploy/server/: docker-compose.linux.yml  docker-compose.windows.yml  loglumen-server.service
scripts/: install_loglumen_agent.sh  install_loglumen_server.sh  uninstall_loglumen_agent.sh  uninstall_loglumen_server.sh
scripts/windows/: TESTING_GUIDE.md  check_agent_status.ps1  diagnose_install.ps1  install_loglumen_agent.ps1  test_agent_communication.ps1  test_install_script.ps1  uninstall_loglumen_agent.ps1  verify_syntax.ps1
server/: Cargo.toml  Dockerfile
server/src/: main.rs
server/static/: dashboard.js  index.html  node.html  node.js  style.css
